corrected logout link position at top right to be visible

--- a/apps/remote_pi_app/static/remote_pi_app/css/style1.css
+++ b/apps/remote_pi_app/static/remote_pi_app/css/style1.css
@@ -31,6 +31,7 @@ input {
 
 #logout_link {
   float: right;
+  margin-right: 3%;
   text-decoration: none;
   color: red;
 }
